@@ -1,6 +1,2 @@
 - module: apache
-  metricsets: ["status"]
-  period: 10s
-
-  # Apache hosts
   hosts: ["http://127.0.0.1"]
